--- a/sourceapi/package.json
+++ b/sourceapi/package.json
@@ -7,7 +7,10 @@
   "private": true,
   "scripts": {
     "dev": "nodemon -L server.js",
-    "start": "node server"
+    "start": "node server",
+    "build": "echo \"Nothing to build\"",
+    "deploy": "echo \"Nothing to deploy\"",
+    "test": "echo \"Nothing to test\""
   },
   "_moduleAliases": {
     "@root": ".",
